[gd_scene load_steps=33 format=3 uid="uid://1ldra2lpi55u"]

[ext_resource type="Script" path="res://source/main_menu/menu.gd" id="1_74llx"]
[ext_resource type="Script" path="res://source/main_menu/menu_element.gd" id="2_h3ser"]
[ext_resource type="PackedScene" uid="uid://7bfnwn4tg3f3" path="res://scenes/game.tscn" id="2_i8b50"]
[ext_resource type="Texture2D" uid="uid://o0r3d53uvbmj" path="res://gui/Главное меню и настройки/главное меню 1.png" id="3_ors6w"]
[ext_resource type="Script" path="res://source/main_menu/main_menu_button.gd" id="3_sfhbu"]
[ext_resource type="Script" path="res://scenes/menu/menu_background.gd" id="4_f824p"]
[ext_resource type="PackedScene" uid="uid://c1njjadxa43bg" path="res://scenes/settings.tscn" id="5_7o1gw"]
[ext_resource type="Texture2D" uid="uid://djv3txdrxhsae" path="res://gui/Главное меню и настройки/левая.png" id="5_8p1ol"]
[ext_resource type="Texture2D" uid="uid://dmdnbgkovufq5" path="res://gui/Главное меню и настройки/Меню 2.png" id="5_pyue1"]
[ext_resource type="PackedScene" uid="uid://beneekmk33mka" path="res://scenes/save_manager/save_list.tscn" id="5_rnans"]
[ext_resource type="Texture2D" uid="uid://brnxtegkgyyqc" path="res://gui/Главное меню и настройки/правая.png" id="6_a3sls"]
[ext_resource type="Texture2D" uid="uid://bu1fc76i5fe2v" path="res://gui/Главное меню и настройки/Лого.png" id="7_nugf5"]
[ext_resource type="Theme" uid="uid://o18on08dn11a" path="res://scenes/menu/menu_buttons.tres" id="8_7egbi"]
[ext_resource type="Script" path="res://scenes/menu/continue_button.gd" id="10_tp6ug"]
[ext_resource type="Script" path="res://scenes/menu/exit_button.gd" id="11_ahf2s"]
[ext_resource type="Texture2D" uid="uid://bo0h30eo6twp2" path="res://gui/фон Сохранения и настройки.png" id="13_ivy2m"]
[ext_resource type="Script" path="res://source/web_link.gd" id="15_ddq1b"]
[ext_resource type="Script" path="res://source/button_with_sound.gd" id="16_ruy8w"]
[ext_resource type="Theme" uid="uid://cgymxxcr7u4ai" path="res://scenes/save_manager/save_theme.tres" id="17_uo323"]
[ext_resource type="PackedScene" uid="uid://btjj01uvktlvn" path="res://scenes/menu/gallery_item.tscn" id="18_pqco6"]
[ext_resource type="Texture2D" uid="uid://fr16djow08qc" path="res://locations/коридор/коридор ночь.png" id="19_ljm3s"]
[ext_resource type="AudioStream" uid="uid://7xl4kj5ya886" path="res://audio/music/menu.mp3" id="19_ojgkf"]
[ext_resource type="Texture2D" uid="uid://faunxy17wew" path="res://locations/коридор/коридор лампы.png" id="20_q2gk7"]
[ext_resource type="Texture2D" uid="uid://dj6eabukh2w57" path="res://locations/коридор/коридор день.png" id="21_2b7s8"]
[ext_resource type="Texture2D" uid="uid://ddg8qqv3ih5qg" path="res://locations/коридор/коридор шторм.png" id="22_q31uk"]
[ext_resource type="Script" path="res://scenes/menu/image_preview.gd" id="23_dqe06"]

[sub_resource type="Animation" id="Animation_rcg8h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ckxfq"]
resource_name = "движение"
length = 12.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 6, 9, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 15), Vector2(-5, 10), Vector2(-20, 6), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3, 6, 9, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-15, 7), Vector2(16, 26), Vector2(20, 11), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wnxuj"]
_data = {
"RESET": SubResource("Animation_rcg8h"),
"движение": SubResource("Animation_ckxfq")
}

[sub_resource type="Animation" id="Animation_0s6sp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_51bo5"]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l0v30"]
_data = {
"RESET": SubResource("Animation_0s6sp"),
"fadeout": SubResource("Animation_51bo5")
}

[node name="Menu" type="Control" node_paths=PackedStringArray("main", "exit_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_74llx")
main = NodePath("Главный экран")
exit_button = NodePath("Главный экран/VBoxContainer/Выйти")
game_scene_file = ExtResource("2_i8b50")

[node name="Background" type="TextureRect" parent="." node_paths=PackedStringArray("hands")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ors6w")
expand_mode = 1
script = ExtResource("4_f824p")
hands = NodePath("Руки")
true_ending = ExtResource("5_pyue1")

[node name="Руки" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="1" type="TextureRect" parent="Background/Руки"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5760.0
offset_bottom = 3240.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8p1ol")
metadata/_edit_lock_ = true

[node name="2" type="TextureRect" parent="Background/Руки"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5760.0
offset_bottom = 3240.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_a3sls")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Руки"]
libraries = {
"": SubResource("AnimationLibrary_wnxuj")
}
autoplay = "движение"

[node name="Logo" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -242.0
offset_top = -114.0
offset_right = -30.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("7_nugf5")
expand_mode = 2
stretch_mode = 5

[node name="Jam" type="RichTextLabel" parent="Background"]
layout_mode = 0
offset_left = 1527.0
offset_top = 366.0
offset_right = 1886.0
offset_bottom = 392.0
theme = ExtResource("8_7egbi")
theme_override_colors/default_color = Color(0.627451, 0.0392157, 0.0392157, 1)
theme_override_font_sizes/normal_font_size = 24
text = "Создано в рамках Джема Ста Цветов"
fit_content = true
scroll_active = false

[node name="Главный экран" type="Control" parent="." node_paths=PackedStringArray("focus_element")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_h3ser")
focus_element = NodePath("VBoxContainer/Начать игру")

[node name="VBoxContainer" type="VBoxContainer" parent="Главный экран"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -369.0
offset_right = 291.0
offset_bottom = -100.0
grow_vertical = 0

[node name="Начать игру" type="Button" parent="Главный экран/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme = ExtResource("8_7egbi")
text = "Начать игру"
alignment = 0
script = ExtResource("16_ruy8w")

[node name="Продолжить" type="Button" parent="Главный экран/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme = ExtResource("8_7egbi")
text = "Продолжить"
alignment = 0
script = ExtResource("10_tp6ug")

[node name="Загрузить игру" type="Button" parent="Главный экран/VBoxContainer" node_paths=PackedStringArray("menu_element_to_show")]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme = ExtResource("8_7egbi")
text = "Загрузить игру"
alignment = 0
script = ExtResource("3_sfhbu")
menu_element_to_show = NodePath("../../../Загрузить игру")

[node name="Галерея" type="Button" parent="Главный экран/VBoxContainer" node_paths=PackedStringArray("menu_element_to_show")]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme = ExtResource("8_7egbi")
text = "Галерея"
alignment = 0
script = ExtResource("3_sfhbu")
menu_element_to_show = NodePath("../../../Галерея")

[node name="New" type="RichTextLabel" parent="Главный экран/VBoxContainer/Галерея"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -17.5
offset_right = 111.0
offset_bottom = 17.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("8_7egbi")
bbcode_enabled = true
text = "[color=red](новое)"
scroll_active = false

[node name="Экстра" type="Button" parent="Главный экран/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme = ExtResource("8_7egbi")
disabled = true
text = "Экстра"
alignment = 0
script = ExtResource("3_sfhbu")

[node name="Настройки" type="Button" parent="Главный экран/VBoxContainer" node_paths=PackedStringArray("menu_element_to_show")]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme = ExtResource("8_7egbi")
text = "Настройки
"
alignment = 0
script = ExtResource("3_sfhbu")
menu_element_to_show = NodePath("../../../Настройки")

[node name="Авторы" type="Button" parent="Главный экран/VBoxContainer" node_paths=PackedStringArray("menu_element_to_show")]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme = ExtResource("8_7egbi")
text = "Авторы"
alignment = 0
script = ExtResource("3_sfhbu")
menu_element_to_show = NodePath("../../../Авторы")

[node name="Выйти" type="Button" parent="Главный экран/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme = ExtResource("8_7egbi")
text = "Выйти"
alignment = 0
script = ExtResource("11_ahf2s")

[node name="Загрузить игру" parent="." instance=ExtResource("5_rnans")]
visible = false
layout_mode = 1

[node name="Галерея" type="Control" parent="." node_paths=PackedStringArray("return_button")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_h3ser")
return_button = NodePath("Вернуться")

[node name="Background" type="TextureRect" parent="Галерея"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_ivy2m")
expand_mode = 1

[node name="Заголовок" type="Label" parent="Галерея"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -380.0
offset_right = 300.0
offset_bottom = -346.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_7egbi")
text = "Галерея"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Галерея"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -300.0
offset_right = 550.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("17_uo323")

[node name="HFlowContainer" type="HFlowContainer" parent="Галерея/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Коридор (ночь)" parent="Галерея/ScrollContainer/HFlowContainer" instance=ExtResource("18_pqco6")]
layout_mode = 2
description = "Ночной коридор."
image = ExtResource("19_ljm3s")

[node name="GalleryItem2" parent="Галерея/ScrollContainer/HFlowContainer" instance=ExtResource("18_pqco6")]
layout_mode = 2
image = ExtResource("20_q2gk7")

[node name="GalleryItem3" parent="Галерея/ScrollContainer/HFlowContainer" instance=ExtResource("18_pqco6")]
layout_mode = 2
image = ExtResource("21_2b7s8")

[node name="GalleryItem4" parent="Галерея/ScrollContainer/HFlowContainer" instance=ExtResource("18_pqco6")]
layout_mode = 2
condition = "TRUE_ENDING1"
image = ExtResource("22_q31uk")

[node name="GalleryItem5" parent="Галерея/ScrollContainer/HFlowContainer" instance=ExtResource("18_pqco6")]
layout_mode = 2

[node name="GalleryItem6" parent="Галерея/ScrollContainer/HFlowContainer" instance=ExtResource("18_pqco6")]
layout_mode = 2

[node name="GalleryItem7" parent="Галерея/ScrollContainer/HFlowContainer" instance=ExtResource("18_pqco6")]
layout_mode = 2

[node name="GalleryItem8" parent="Галерея/ScrollContainer/HFlowContainer" instance=ExtResource("18_pqco6")]
layout_mode = 2

[node name="GalleryItem9" parent="Галерея/ScrollContainer/HFlowContainer" instance=ExtResource("18_pqco6")]
layout_mode = 2

[node name="GalleryItem10" parent="Галерея/ScrollContainer/HFlowContainer" instance=ExtResource("18_pqco6")]
layout_mode = 2

[node name="Вернуться" type="Button" parent="Галерея"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.5
offset_top = 338.0
offset_right = 118.5
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("8_7egbi")
text = "Вернуться в меню "
script = ExtResource("16_ruy8w")

[node name="ImagePreview" type="Control" parent="Галерея" node_paths=PackedStringArray("image_rect", "description_label")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("23_dqe06")
image_rect = NodePath("Image")
description_label = NodePath("Label")

[node name="Image" type="TextureRect" parent="Галерея/ImagePreview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Галерея/ImagePreview"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("8_7egbi")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="Exit" type="Button" parent="Галерея/ImagePreview"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
text = "Вернуться"

[node name="Настройки" parent="." instance=ExtResource("5_7o1gw")]
visible = false
layout_mode = 1

[node name="Авторы" type="Control" parent="." node_paths=PackedStringArray("return_button", "focus_element")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_h3ser")
return_button = NodePath("Вернуться")
focus_element = NodePath("Вернуться")

[node name="Background" type="TextureRect" parent="Авторы"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_ivy2m")
expand_mode = 1

[node name="Заголовок" type="Label" parent="Авторы"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -380.0
offset_right = 300.0
offset_bottom = -346.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_7egbi")
text = "Авторы"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Авторы"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -20.0
offset_right = 300.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Авторы/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_7egbi")
bbcode_enabled = true
text = "[center]Разработка: [url=https://ozkitsune.itch.io/]O3ZY[/url]
Сценарий: [url=https://ozkitsune.itch.io/]O3ZY[/url]
Редактура: [url=https://vk.com/musical_output]lexander[/url]
Графика: [url=https://vk.com/ankelran]RANKEL[/url], [url=https://vk.com/agnialoo]Василий Василич[/url]
Музыка и звуковой дизайн: [url=https://vk.com/musical_output]lexander[/url]

Автор идеи: [url=https://itch.io/profile/aki-ona]Akiona[/url]

[url=https://penquins.software/]Pen[color=red]q[/color]uins Software[/url]"
fit_content = true
scroll_active = false
script = ExtResource("15_ddq1b")

[node name="Вернуться" type="Button" parent="Авторы"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.5
offset_top = 338.0
offset_right = 118.5
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("8_7egbi")
text = "Вернуться в меню "
script = ExtResource("16_ruy8w")

[node name="Затемнение" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Затемнение"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.00784314, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Затемнение"]
libraries = {
"": SubResource("AnimationLibrary_l0v30")
}
autoplay = "fadeout"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_ojgkf")
autoplay = true
bus = &"Music"

[connection signal="return_was_pressed" from="Главный экран" to="." method="_show_main_menu"]
[connection signal="pressed" from="Главный экран/VBoxContainer/Начать игру" to="." method="_start_game"]
[connection signal="pressed" from="Главный экран/VBoxContainer/Продолжить" to="." method="continue_game"]
[connection signal="menu_element_was_selected" from="Главный экран/VBoxContainer/Загрузить игру" to="." method="_show_menu_element"]
[connection signal="menu_element_was_selected" from="Главный экран/VBoxContainer/Галерея" to="." method="_show_menu_element"]
[connection signal="menu_element_was_selected" from="Главный экран/VBoxContainer/Настройки" to="." method="_show_menu_element"]
[connection signal="menu_element_was_selected" from="Главный экран/VBoxContainer/Авторы" to="." method="_show_menu_element"]
[connection signal="load_save" from="Загрузить игру" to="." method="load_game"]
[connection signal="return_was_pressed" from="Загрузить игру" to="." method="_show_main_menu"]
[connection signal="return_was_pressed" from="Галерея" to="." method="_show_main_menu"]
[connection signal="gallery_item" from="Галерея/ScrollContainer/HFlowContainer/Коридор (ночь)" to="Галерея/ImagePreview" method="show_image"]
[connection signal="gallery_item" from="Галерея/ScrollContainer/HFlowContainer/GalleryItem4" to="Галерея/ImagePreview" method="show_image"]
[connection signal="pressed" from="Галерея/ImagePreview/Exit" to="Галерея/ImagePreview" method="_on_exit_pressed"]
[connection signal="return_was_pressed" from="Настройки" to="." method="_show_main_menu"]
[connection signal="return_was_pressed" from="Авторы" to="." method="_show_main_menu"]
